@@ -10,7 +10,6 @@
       "Markdown Syntax": "http://daringfireball.net/projects/markdown/syntax"
    },
    "locales": [ "en", "de" ],
-   "repo_url": "https://github.com/pjfl/p5-app-doh.git",
    "title": "Doh!",
    "twitter": [ "perl" ]
 }
