@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Added JS navbar scroller
           - Debugging static posts
           - Added Deutche PO file
           - Updated metadata
